--- a/test/integration/targets/eos_eapi/tests/cli/configure.yaml
+++ b/test/integration/targets/eos_eapi/tests/cli/configure.yaml
@@ -8,15 +8,14 @@
     enable_local_http: yes
     local_http_port: 8181
     provider: "{{ cli }}"
+  become: yes
   register: eos_eapi_output
-  connection: local
 
 - eos_command:
     commands:
       - show management api http-commands | json
     provider: "{{ cli }}"
   register: http_config
-  connection: local
 
 - name: Expect endpoint ports to be set
   assert:
@@ -32,8 +31,8 @@
     enable_local_http: yes
     local_http_port: 8181
     provider: "{{ cli }}"
+  become: yes
   register: eos_eapi_output
-  connection: local
 
 - name: Expect action to be idempotent
   assert:
