--- a/test/integration/targets/eos_eapi/tests/cli/config.yaml
+++ b/test/integration/targets/eos_eapi/tests/cli/config.yaml
@@ -1,4 +1,4 @@
-- debug: msg="START cli/config.yaml"
+- debug: msg="START cli/config.yaml on connection={{ ansible_connection }}"
 
 
 #----
@@ -7,21 +7,21 @@
     lines: no management api http-commands
     match: none
     provider: "{{ cli }}"
-  connection: local
+  become: yes
 
 - name: Get running-config
   eos_command:
     commands: show running-config
     provider: "{{ cli }}"
+  become: yes
   register: config
-  connection: local
 
 - name: Set config
   eos_eapi:
     config: "{{ config.stdout[0] }}"
     provider: "{{ cli }}"
+  become: yes
   register: config
-  connection: local
 
 - name: Ensure that this triggered a change
   assert:
@@ -33,15 +33,15 @@
   eos_command:
     commands: show running-config
     provider: "{{ cli }}"
+  become: yes
   register: config
-  connection: local
 
 - name: Set config
   eos_eapi:
     config: "{{ config.stdout[0] }}"
     provider: "{{ cli }}"
+  become: yes
   register: config
-  connection: local
 
 
 - name: Idempotency check
@@ -49,4 +49,4 @@
     that:
       - "config.changed == false"
 
-- debug: msg="END cli/config.yaml"
+- debug: msg="END cli/config.yaml on connection={{ ansible_connection }}"
