--- a/test/integration/targets/eos_user/tests/cli/basic.yaml
+++ b/test/integration/targets/eos_user/tests/cli/basic.yaml
@@ -7,6 +7,7 @@
       - no username ansibletest3
       - no username ansibletest4
     provider: "{{ cli }}"
+  become: yes
 
 - name: Create user with role
   eos_user:
@@ -17,6 +18,7 @@
     configured_password: test1
     authorize: yes
     provider: "{{ cli }}"
+  become: yes
   register: result
 
 - assert:
@@ -36,6 +38,7 @@
     authorize: yes
     update_password: on_create
     provider: "{{ cli }}"
+  become: yes
   register: result
 
 - assert:
@@ -54,6 +57,7 @@
     state: present
     role: network-operator
     provider: "{{ cli }}"
+  become: yes
   register: result
 
 - assert:
@@ -73,6 +77,7 @@
     state: present
     authorize: yes
     provider: "{{ cli }}"
+  become: yes
   ignore_errors: yes
   register: result
 
