--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -32,7 +32,7 @@
 #                    which are valid GitHub labels are automatically added.
 #
 
-automerge: True
+automerge: False
 files:
   .github/BOTMETA.yml:
     labels: botmeta
