--- a/test/integration/targets/net_user/tests/eos/userprivilege.yaml
+++ b/test/integration/targets/net_user/tests/eos/userprivilege.yaml
@@ -1,4 +1,11 @@
 ---
+- name: Setup
+  net_user: &clear_netop
+    name: netop
+    state: absent
+    authorize: yes
+    provider: "{{ cli }}"
+
 - name: Set user to privilege level 15
   net_user:
     name: netop
@@ -12,9 +19,7 @@
 - assert:
     that:
       - 'result.changed == true'
-      - 'result.commands == ["username netop privilege 15"]'
+      - 'result.commands == ["username netop privilege 15", "username netop nopassword"]'
 
 - name: tearDown
-  net_user:
-    purge: yes
-    provider: "{{ cli }}"
+  net_user: *clear_netop
