--- a/test/integration/targets/vyos_lldp_interface/tests/cli/basic.yaml
+++ b/test/integration/targets/vyos_lldp_interface/tests/cli/basic.yaml
@@ -1,4 +1,6 @@
 ---
+- debug: msg="START vyos_lldp_interface cli/basic.yaml on connection={{ ansible_connection }}"
+
 - name: Make sure LLDP is not running before tests
   vyos_config:
     lines: delete service lldp
