Revert "Disable automerge while working on pep8"
This reverts commit 87776d75dc39847c5223a3268063bc3d4eb30235.

--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -32,7 +32,7 @@
 #                    which are valid GitHub labels are automatically added.
 #
 
-automerge: False
+automerge: True
 files:
   .github/BOTMETA.yml:
     labels: botmeta
