Add recursion test

--- a/test/integration/targets/include_import/tasks/tasks2.yml
+++ b/test/integration/targets/include_import/tasks/tasks2.yml
@@ -1,4 +1,5 @@
-- debug:
-    msg: In tasks2
+- name: Set variable inside tasks2.yml
+  set_fact:
+    set_in_tasks2: yes
   tags:
-    - task2
+    - tasks2
