--- a/test/integration/targets/include_import/playbook/test_import_playbook.yml
+++ b/test/integration/targets/include_import/playbook/test_import_playbook.yml
@@ -14,3 +14,8 @@
   when: include_next_playbook
 
 - import_playbook: validate34.yml
+
+
+# Test play group_vars inheritance
+# https://github.com/ansible/ansible/issues/33177
+- import_playbook: dir/playbook_in_subdir.yml
