Run debian-specific tests only there

--- a/test/integration/targets/apache2_module/tasks/actualtest.yml
+++ b/test/integration/targets/apache2_module/tasks/actualtest.yml
@@ -82,17 +82,51 @@
     name: autoindex
     state: present
 
-- name: force disable of autoindex  # bug #2499
-  apache2_module:
-    name: autoindex
-    state: absent
-    force: True
-  when: "ansible_os_family == 'Debian'"
+- name: Debian/Ubuntu specific tests
+  block:
+  - name: force disable of autoindex  # bug #2499
+    apache2_module:
+      name: autoindex
+      state: absent
+      force: True
 
-- name: enable evasive module, test https://github.com/ansible/ansible/issues/22635
-  apache2_module:
-    name: evasive
-    state: present
+  - name: enable evasive module, test https://github.com/ansible/ansible/issues/22635
+    apache2_module:
+      name: evasive
+      state: present
+
+  - name: use identifier to enable module, fix for https://github.com/ansible/ansible/issues/33669
+    apache2_module:
+      name: dump_io
+      state: present
+    ignore_errors: True
+    register: enable_dumpio_wrong
+
+  - name: disable dump_io
+    apache2_module:
+      name: dump_io
+      identifier: dumpio_module
+      state: absent
+
+  - name: use identifier to enable module, fix for https://github.com/ansible/ansible/issues/33669
+    apache2_module:
+      name: dump_io
+      identifier: dumpio_module
+      state: present
+    register: enable_dumpio_correct_1
+
+  - name: ensure idempotency with identifier
+    apache2_module:
+      name: dump_io
+      identifier: dumpio_module
+      state: present
+    register: enable_dumpio_correct_2
+
+  - assert:
+      that:
+        - enable_dumpio_wrong is failed
+        - enable_dumpio_correct_1 is changed
+        - enable_dumpio_correct_2 is not changed
   when: "ansible_os_family == 'Debian'"
 
 - name: disable mpm modules
@@ -174,39 +208,3 @@
     - mpm_event
     - mpm_prefork
   when: "ansible_os_family == 'Debian'"
-||||||| merged common ancestors
-=======
-
-- name: use identifier to enable module, fix for https://github.com/ansible/ansible/issues/33669
-  apache2_module:
-    name: dump_io
-    state: present
-  ignore_errors: True
-  register: enable_dumpio_wrong
-
-- name: disable dump_io
-  apache2_module:
-    name: dump_io
-    identifier: dumpio_module
-    state: absent
-
-- name: use identifier to enable module, fix for https://github.com/ansible/ansible/issues/33669
-  apache2_module:
-    name: dump_io
-    identifier: dumpio_module
-    state: present
-  register: enable_dumpio_correct_1
-
-- name: ensure idempotency with identifier
-  apache2_module:
-    name: dump_io
-    identifier: dumpio_module
-    state: present
-  register: enable_dumpio_correct_2
-
-- assert:
-    that:
-      - enable_dumpio_wrong is failed
-      - enable_dumpio_correct_1 is changed
-      - enable_dumpio_correct_2 is not changed
->>>>>>> Add identifier option to apache2_module
