make modules compatible

--- a/test/integration/targets/nxos_command/tests/cli/sanity.yaml
+++ b/test/integration/targets/nxos_command/tests/cli/sanity.yaml
@@ -19,8 +19,7 @@
   - assert: &fail
       that:
         - "result.failed == true"
-        - "'Invalid command' in result.module_stderr"
-        - "'MODULE FAILURE' in result.msg"
+        - "'Invalid command' in result.msg"
 
   - name: "Enable feature BGP"
     nxos_feature:
