--- a/test/integration/targets/include_import/playbook/dir/playbook_in_subdir.yml
+++ b/test/integration/targets/include_import/playbook/dir/playbook_in_subdir.yml
@@ -1,11 +1,11 @@
 - name: Playbook inside dir/
   hosts: testhost2
 
-
   tasks:
     # FIXME Currently failing
-    - name: Assert that variable from group_vars/all.yml is properly set
+    - name: Assert group_vars are properly set
       assert:
         that:
           - group_var1 == 'set in group_vars/all.yml'
+          - group_var2 == 'set in dir/group_vars/all.yml'
       ignore_errors: yes
