More work on import_tasks

--- a/test/integration/targets/include_import/tasks/test_import_tasks.yml
+++ b/test/integration/targets/include_import/tasks/test_import_tasks.yml
@@ -18,3 +18,25 @@
       assert:
         that:
           - set_in_tasks2 is not defined
+
+    - block:
+        - name: Import tasks inside a block
+          import_tasks: tasks3.yml
+
+        - name: Assert that task3 was included
+          assert:
+            that:
+              - set_in_tasks3
+
+      always:
+        - name: Import task inside always
+          import_tasks: tasks4.yml
+
+        - name: Validate that variables set in previously improted tasks are passed down.
+          import_tasks: validate3.yml
+
+        - name: Assert that tasks4 was included
+          assert:
+            that:
+              - set_in_tasks4
+
