Add/update START messages where appropriate

--- a/test/integration/targets/vyos_lldp_interface/tests/cli/basic.yaml
+++ b/test/integration/targets/vyos_lldp_interface/tests/cli/basic.yaml
@@ -1,5 +1,5 @@
 ---
-- debug: msg="START vyos_lldp_interface cli/basic.yaml on connection={{ ansible_connection }}"
+- debug: msg="START cli/basic.yaml on connection={{ ansible_connection }}"
 
 - name: Make sure LLDP is not running before tests
   vyos_config:
