--- a/test/integration/targets/vyos_l3_interface/tests/cli/basic.yaml
+++ b/test/integration/targets/vyos_l3_interface/tests/cli/basic.yaml
@@ -1,5 +1,5 @@
 ---
-- debug: msg="START vyos_l3_interface cli/basic.yaml on connection={{ ansible_connection }}"
+- debug: msg="START cli/basic.yaml on connection={{ ansible_connection }}"
 
 - name: Remove IP address
   vyos_l3_interface:
