--- a/test/integration/targets/vyos_linkagg/tests/cli/basic.yaml
+++ b/test/integration/targets/vyos_linkagg/tests/cli/basic.yaml
@@ -1,5 +1,5 @@
 ---
-- debug: msg="vyos_linkagg cli/basic.yaml on connection={{ ansible_connection }}"
+- debug: msg="cli/basic.yaml on connection={{ ansible_connection }}"
 
 - name: Remove linkagg
   vyos_linkagg:
