Add missing START messages

--- a/test/integration/targets/eos_banner/tests/cli/basic-login.yaml
+++ b/test/integration/targets/eos_banner/tests/cli/basic-login.yaml
@@ -1,4 +1,6 @@
 ---
+- debug: msg="START cli/basic-login.yaml on connection={{ ansible_connection }}"
+
 - name: Remove previous login banner
   eos_config:
     lines: no banner login
