--- a/test/integration/targets/azure_rm_mysqlserver/tasks/main.yml
+++ b/test/integration/targets/azure_rm_mysqlserver/tasks/main.yml
@@ -1,7 +1,52 @@
+- name: Prepare random number
+  set_fact:
+    random_postfix: "{{ 1000 | random }}"
+  run_once: yes
+
+- name: Delete unexisting instance of MySQL Server -- check mode
+  azure_rm_mysqlserver:
+    resource_group: "{{ resource_group }}"
+    name: "mysqlsrv{{ random_postfix }}{{ resource_group | hash('md5') | truncate(7, True, '') }}"
+    state: absent
+  check_only: yes
+  register: output
+- name: Assert the state has changed
+  assert:
+    that:
+      - output.changed == false
+
+- name: Delete unexisting instance of MySQL Server
+  azure_rm_mysqlserver:
+    resource_group: "{{ resource_group }}"
+    name: "mysqlsrv{{ random_postfix }}{{ resource_group | hash('md5') | truncate(7, True, '') }}"
+    state: absent
+  register: output
+- name: Assert the state has changed
+  assert:
+    that:
+      - output.changed == false
+
+- name: Create instance of MySQL Server -- check mode
+  azure_rm_mysqlserver:
+    resource_group: "{{ resource_group }}"
+    name: "mysqlsrv{{ random_postfix }}{{ resource_group | hash('md5') | truncate(7, True, '') }}"
+    properties:
+      version: 5.6
+      create_mode: Default
+      admin_username: zimxyz
+      admin_password: Testpasswordxyz12!
+    location: westus
+  check_mode: yes
+  register: output
+- name: Assert the resource instance is well created
+  assert:
+    that:
+      - output.changed
+
 - name: Create instance of MySQL Server
   azure_rm_mysqlserver:
     resource_group: "{{ resource_group }}"
-    name: test-mysql-server
+    name: "mysqlsrv{{ random_postfix }}{{ resource_group | hash('md5') | truncate(7, True, '') }}"
     properties:
       version: 5.6
       create_mode: Default
@@ -13,12 +58,12 @@
   assert:
     that:
       - output.changed
-      - output.state.user_visible_state == 'Ready'
+      - output.user_visible_state == 'Ready'
 
-- name: Update instance of MySQL Server
+- name: Create again instance of MySQL Server -- check mode
   azure_rm_mysqlserver:
     resource_group: "{{ resource_group }}"
-    name: test-mysql-server
+    name: "mysqlsrv{{ random_postfix }}{{ resource_group | hash('md5') | truncate(7, True, '') }}"
     properties:
       version: 5.6
       create_mode: Default
@@ -30,12 +75,40 @@
   assert:
     that:
       - output.changed == false
-      - output.state.user_visible_state == 'Ready'
+
+- name: Create again instance of MySQL Server
+  azure_rm_mysqlserver:
+    resource_group: "{{ resource_group }}"
+    name: "mysqlsrv{{ random_postfix }}{{ resource_group | hash('md5') | truncate(7, True, '') }}"
+    properties:
+      version: 5.6
+      create_mode: Default
+      admin_username: zimxyz
+      admin_password: Testpasswordxyz12!
+    location: westus
+  register: output
+- name: Assert the state has not changed
+  assert:
+    that:
+      - output.changed == false
+      - output.user_visible_state == 'Ready'
+
+- name: Delete instance of MySQL Server -- check mode
+  azure_rm_mysqlserver:
+    resource_group: "{{ resource_group }}"
+    name: "mysqlsrv{{ random_postfix }}{{ resource_group | hash('md5') | truncate(7, True, '') }}"
+    state: absent
+  check_mode: yes
+  register: output
+- name: Assert the state has changed
+  assert:
+    that:
+      - output.changed
 
 - name: Delete instance of MySQL Server
   azure_rm_mysqlserver:
     resource_group: "{{ resource_group }}"
-    name: test-mysql-server
+    name: "mysqlsrv{{ random_postfix }}{{ resource_group | hash('md5') | truncate(7, True, '') }}"
     state: absent
   register: output
 - name: Assert the state has changed
