fix as pr comments

--- a/test/integration/targets/azure_rm_virtualmachine/tasks/virtualmachine.yml
+++ b/test/integration/targets/azure_rm_virtualmachine/tasks/virtualmachine.yml
@@ -136,13 +136,40 @@
       source: "https://{{ storage_account }}.blob.core.windows.net/testvm001/testvm001.vhd"
       name: testimage001
       os_type: Linux
+  check_mode: yes
+  register: output
+
+- assert:
+      that: output.changed
+
+- name: Create an image from VM
+  azure_rm_image:
+      resource_group: "{{ resource_group }}"
+      source: "https://{{ storage_account }}.blob.core.windows.net/testvm001/testvm001.vhd"
+      name: testimage001
+      os_type: Linux
+  register: output
+
+- assert:
+      that:
+          - output.changed
+          - output.state.sourceVirtualMachine == "https://{{ storage_account }}.blob.core.windows.net/testvm001/testvm001.vhd"
+
+- name: Create an image from VM
+  azure_rm_image:
+      resource_group: "{{ resource_group }}"
+      source: "https://{{ storage_account }}.blob.core.windows.net/testvm001/testvm001.vhd"
+      name: testimage001
+      os_type: Linux
+  register: output
+
+- assert:
+      that: not output.changed
 
 - name: Delete image
   azure_rm_image:
       resource_group: "{{ resource_group }}"
       name: testimage01
-      source: "https://{{ storage_account }}.blob.core.windows.net/testvm001/testvm001.vhd"
-      os_type: Linux
       state: absent
 
 - name: Delete VM
