--- a/test/integration/nxos.yaml
+++ b/test/integration/nxos.yaml
@@ -554,6 +554,15 @@
             failed_modules: "{{ failed_modules }} + [ 'nxos_snmp_host' ]"
             test_failed: true
 
+    - block:
+      - include_role:
+          name: nxos_l3_interface
+        when: "limit_to in ['*', 'nxos_l3_interface']"
+      rescue:
+        - set_fact:
+            failed_modules: "{{ failed_modules }} + [ 'nxos_l3_interface' ]"
+            test_failed: true
+
 ###########
     - debug: var=failed_modules
       when: test_failed
