--- a/shippable.yml
+++ b/shippable.yml
@@ -9,28 +9,16 @@ matrix:
     - env: T=none
   include:
     - env: T=rhel/7.4/1 P=azure S=dev
-    - env: T=freebsd/10.4/1 P=azure S=dev
-    - env: T=freebsd/11.1/1 P=azure S=dev
+    - env: T=rhel/7.4/1 P=azure S=prod
+    - env: T=rhel/7.4/1 P=aws
 
     - env: T=rhel/7.4/2 P=azure S=dev
-    - env: T=freebsd/10.4/2 P=azure S=dev
-    - env: T=freebsd/11.1/2 P=azure S=dev
+    - env: T=rhel/7.4/2 P=azure S=prod
+    - env: T=rhel/7.4/2 P=aws
 
     - env: T=rhel/7.4/3 P=azure S=dev
-    - env: T=freebsd/10.4/3 P=azure S=dev
-    - env: T=freebsd/11.1/3 P=azure S=dev
-
-    - env: T=rhel/7.4/1 P=azure S=prod
-    - env: T=freebsd/10.4/1 P=azure S=prod
-    - env: T=freebsd/11.1/1 P=azure S=prod
-
-    - env: T=rhel/7.4/2 P=azure S=prod
-    - env: T=freebsd/10.4/2 P=azure S=prod
-    - env: T=freebsd/11.1/2 P=azure S=prod
-
     - env: T=rhel/7.4/3 P=azure S=prod
-    - env: T=freebsd/10.4/3 P=azure S=prod
-    - env: T=freebsd/11.1/3 P=azure S=prod
+    - env: T=rhel/7.4/3 P=aws
 branches:
   except:
     - "*-patch-*"
