--- a/shippable.yml
+++ b/shippable.yml
@@ -8,17 +8,14 @@ matrix:
   exclude:
     - env: T=none
   include:
-    - env: T=freebsd/11.1/1 P=azure S=dev
-    - env: T=freebsd/11.1/1 P=azure S=prod
-    - env: T=freebsd/11.1/1 P=aws
+    - env: T=freebsd/10.4/1 P=azure
+    - env: T=freebsd/10.4/1 P=aws
 
-    - env: T=freebsd/11.1/2 P=azure S=dev
-    - env: T=freebsd/11.1/2 P=azure S=prod
-    - env: T=freebsd/11.1/2 P=aws
+    - env: T=freebsd/10.4/2 P=azure
+    - env: T=freebsd/10.4/2 P=aws
 
-    - env: T=freebsd/11.1/3 P=azure S=dev
-    - env: T=freebsd/11.1/3 P=azure S=prod
-    - env: T=freebsd/11.1/3 P=aws
+    - env: T=freebsd/10.4/3 P=azure
+    - env: T=freebsd/10.4/3 P=aws
 branches:
   except:
     - "*-patch-*"
