Add delay in junos integration test after netconf is enabled
 junos integration test fails intermittently after task enables netconf
 on the remote host and the second task tries to create a persistent
 connection. Add a delay after the first task to ensure netconf is up
 running on remote host.

--- a/test/integration/targets/prepare_junos_tests/tasks/main.yml
+++ b/test/integration/targets/prepare_junos_tests/tasks/main.yml
@@ -7,3 +7,7 @@
 - name: Ensure netconf is enabled
   junos_netconf:
     state: present
+
+- name: wait for netconf server to come up
+  pause:
+    seconds: 10
